2006-01-23  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Eric.

        - Made some functions return const AtomicString& instead of
        AtomicString because they could. 
        
        Result of Darin's and Eric's comments on the last patch.

        * khtml/html/HTMLGenericFormElementImpl.cpp:
        (WebCore::HTMLGenericFormElementImpl::name):
        * khtml/html/HTMLGenericFormElementImpl.h:
        * khtml/html/HTMLInputElementImpl.cpp:
        (WebCore::HTMLInputElementImpl::name):
        * khtml/html/HTMLInputElementImpl.h:

2006-01-23  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - renamed PointerHash to PtrHash
        - made PtrHash the default hash function for int and pointer types that aren't further specialized
        - added an AtomicStringImpl class to make it easier and more typesafe to identity hash atomic strings
        - did appropriate consequent cleanup (very few places now need to declare a hash function)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6752
        
        * bindings/objc/DOM.mm:
        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge elementWithName:inForm:]):
        * css/cssstyleselector.cpp:
        (WebCore::CSSRuleSet::getIDRules):
        (WebCore::CSSRuleSet::getClassRules):
        (WebCore::CSSRuleSet::getTagRules):
        (WebCore::CSSRuleSet::addToRuleSet):
        * khtml/dom/dom_string.h:
        (KXMLCore::):
        * khtml/ecma/kjs_binding.cpp:
        (KJS::UString::UString):
        * khtml/ecma/kjs_dom.cpp:
        (KJS::DOMNode::mark):
        * khtml/ecma/kjs_html.cpp:
        (KJS::KJS::HTMLElement::classInfo):
        (KJS::HTMLElement::accessors):
        (KJS::HTMLElement::selectSetter):
        (KJS::HTMLElement::inputSetter):
        (KJS::HTMLElement::textAreaSetter):
        (KJS::HTMLElement::buttonSetter):
        * khtml/ecma/kjs_window.h:
        * khtml/editing/apply_style_command.cpp: